# Autarca

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy-testnet.yml
agent/: .env  .env.example  README.md  package-lock.json  package.json
agent/src/: activityLog.ts  agentMemory.ts  config.ts  decisionAgent.ts  executionAgent.ts  index.ts  mcpClient.ts  resilience.ts  riskAgent.ts  seedPositions.ts  types.ts  valuationAgent.ts  x402Client.ts
contracts/: Cargo.toml  Odra.toml  README.md  build.rs
contracts/src/: lib.rs
docs/: demo-script.md  pitch-deck-outline.md
frontend/: .env.local  .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/api/open-position/: route.ts
frontend/app/api/status/: route.ts
frontend/app/landing/: page.tsx
frontend/components/: ActivityFeed.tsx  AgentReasoningTimeline.tsx  AgentReputationPanel.tsx  OnChainActions.tsx  OpenPositionModal.tsx  OracleReputationPanel.tsx  PositionsTable.tsx
frontend/lib/: csprCloud.ts  types.ts  useAgentFeed.ts
scripts/: deploy_testnet.sh  get_contract_hash.sh
