[package]
name = "autarca-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { version = "1.4.0" }

[dev-dependencies]
odra-test = { version = "1.4.0" }

[features]
default = []

[[bin]]
name = "build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
