[package]
name = "autarca-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { version = "2.9.0" }

[dev-dependencies]
odra-test = { version = "2.9.0" }

[build-dependencies]
odra-build = { version = "2.9.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.9.0" }

[features]
default = []

[[bin]]
name = "autarca_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "autarca_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
